# code-embedding-ai

./: .env.example  .gitignore  README.md  architecture.md  delete_old_collection.py  pyproject.toml  pytest.ini  requirements.txt  reset_collection.py  run_tests.py  test_embedding_debug.py  test_local_embedding.py  test_python_support.py
benchmarks/: README.md  search_benchmark.py
config/: pipeline.yaml  security.yaml
docs/: ERROR_HANDLING.md  README.md  README_ko.md  api_documentation.md  python_support.md
src/: cli.py  main.py
src/api/: dependencies.py  error_models.py  main.py  middleware.py  models.py  routes.py
src/code_parser/: base_parser.py  code_parser.py  html_parser.py  java_parser.py  models.py  parser_factory.py  python_chunker.py  python_framework_detector.py  python_metadata.py  python_parser.py
src/config/: logging_config.py
src/database/: chroma_client.py  models.py  project_models.py  project_repository.py  vector_store.py
src/embeddings/: embedding_pipeline.py  embedding_service.py  jina_client.py  local_embedding_client.py  models.py
src/monitoring/: __init__.py  alert_manager.py  health_monitor.py  logger.py  metrics_collector.py  models.py  monitoring_service.py
src/search/: __init__.py  bm25_index.py  hybrid_search.py
src/security/: content_masker.py  models.py  python_patterns.py  secret_detector.py  security_scanner.py
src/updates/: git_monitor.py  models.py  state_manager.py  state_repository.py  update_service.py
src/utils/: __init__.py  error_tracker.py  (+2 more)
tests/: conftest.py  test_api.py  test_code_parser.py  test_database.py  test_e2e_git_updates.py  test_e2e_search.py  test_embeddings.py  test_integration.py  test_monitoring.py  test_python_integration.py  test_python_parser.py  test_python_security.py  test_security.py  test_updates.py
(+3 files in other folders)
